--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {},
   "author": "InLeads",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "js-cookie": "^3.0.5",
     "node-fetch": "^3.3.1",
