--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inleads/event-logger",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A node wrapper for InLeads event logging",
   "main": "index.js",
   "types": "dist/events.d.ts",
@@ -10,7 +10,7 @@
   "author": "InLeads",
   "license": "MIT",
   "dependencies": {
-    "js-cookie": "^3.0.5",
+    "js-cookie": "3.0.1",
     "node-fetch": "2.6.11",
     "ts-loader": "^9.4.3",
     "typescript": "4.5.5",
