--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ts-loader": "^9.4.3",
     "typescript": "4.5.5",
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "4.9.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
