--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@inleads/event-logger",
+  "version": "1.0.9",
   "description": "A node wrapper for InLeads event logging",
   "main": "index.js",
   "types": "dist/events.d.ts",
