--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "InLeads",
   "license": "MIT",
   "dependencies": {
+    "iso-country-currency": "^0.7.2",
     "js-cookie": "3.0.1",
     "node-fetch": "2.6.11",
     "ts-loader": "^9.4.3",
     "typescript": "4.5.5",
+    "ua-parser-js": "^1.0.35",
     "webpack": "^5.85.1",
     "webpack-cli": "4.9.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/ua-parser-js": "^0.7.36",
     "@types/node-fetch": "^2.6.4",
     "prettier": "^2.8.8"
   },
